fix: fix touch on mobile

--- a/packages/client/src/theme/reset.scss
+++ b/packages/client/src/theme/reset.scss
@@ -31,6 +31,7 @@
 
   html {
     text-size-adjust: 100% !important;
+    touch-action: manipulation;
   }
 
   body {
